Trying to fix fullscreen on mobile by wrapping in video tag.

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -99,3 +99,10 @@ parents centre.*/
 
   border: 5px solid red;
 }
+
+.video {
+  background-color: blue;
+  border: 5px solid red;
+  width: 100%;
+  height: 100%;
+}
